deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-app
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-app
  template:
    metadata:
      labels:
        app: java-app
    spec:
      containers:
      - name: java-app
        image: yaspokoyen/java-maven-example:v0.1
        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 3
          successThreshold: 1
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 3
        startupProbe:
          httpGet:
             path: /actuator/health
             port: 8081
          failureThreshold: 10
          periodSeconds: 10 
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8081
        imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: java-app-service
  namespace: app
spec:
  ports:
  - port: 80
    targetPort: 8081
    name: tcp
  selector:
    app: java-app
